# cookiecutter-action

./: README.md  action.yml  generate_template.py
action/: action.yaml
basic_python/{{ cookiecutter.static_name }}/: .pre-commit-config.yaml  Makefile  pyproject.toml
basic_terraform/: .gitignore  .pre-commit-config.yml  .terraform-docs.yml  cookiecutter.json
basic_terraform/.devcontainer/: devcontainer.json
basic_terraform/{{ cookiecutter.static_name }}/: .pre-commit-config.yaml  README.md  providers.tf
cookiecutter/: cookiecutter_python.py
copilot_python/: cookiecutter.json
copilot_python/{{cookiecutter.project_slug}}/: .gitignore  pyproject.toml
copilot_python/{{cookiecutter.project_slug}}/.devcontainer/: Dockerfile
copilot_python/{{cookiecutter.project_slug}}/.github/: agents.md
copilot_python/{{cookiecutter.project_slug}}/.github/instructions/: features.instructions.md  transformers.instructions.md
copilot_python/{{cookiecutter.project_slug}}/config/: data.yaml  features.yaml  model.yaml
copilot_python/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py
copilot_python/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/features/: __init__.py
copilot_python/{{cookiecutter.project_slug}}/tests/: test_smoke.py
template1/: cookiecutter.json
template1/{{ cookiecutter.project_name }}/: pyproject.toml
template1/{{ cookiecutter.project_name }}/src/config/: tables.yaml
template1/{{ cookiecutter.project_name }}/src/data/: get_data.py
template1/{{ cookiecutter.project_name }}/src/models/: train_model.py
(+31 files in other folders)
